--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,54 @@
     opacity: 100;
   }
 }
+
+@keyframes bounceIn {
+  0% {
+    transform: translateY(-300%);
+  }
+  60% {
+    transform: translateY(10%);
+  }
+  80% {
+    transform: translateY(-15%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.bounce-in {
+  animation: bounceIn 1s ease-in-out forwards;
+}
+
+@keyframes comeIn {
+  0% {
+    transform: translateX(-200%);
+  }
+  60% {
+    transform: translateX(30%);
+  }
+  80% {
+    transform: translateX(-5%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.come-in {
+  animation: comeIn 1s ease-in-out forwards;
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(100%);
+  }
+}
+
+.zoom-in {
+  animation: zoomIn 1s ease-in-out forwards;
+}
